completed protfolio website

--- a/index.html
+++ b/index.html
@@ -15,33 +15,49 @@
 </head>
 
 <body>
-    <!-- <h1>Welcome To</h1>
-    <h1><span class="name-highlight">My personal</span> website</h1> -->
-    <!-- <h1><span class="text-color">My personal</span> website</h1> -->
-    <!-- <div class="container">
-        <div class="left-container">
-            <h3>World class professional Web Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi totam ea reiciendis nisi et amet quis neque cum earum voluptates! Officiis quas ducimus consequatur, ut voluptas nulla hic voluptatum doloribus quis, pariatur, iusto tempore! Sit amet totam saepe cumque illo.</p>
-            <button></button>
-        </div>
-
-        <div class="right-container">
-            <img src="images/" alt="">
-        </div>
-       
-    </div> -->
-    <section>
+    <section class="top-banner">
         <div class="half-width">
         <h1>Welcome To</h1>
-        <h1><span class="name-highlight">My personal</span> website</h1>
+        <h1><span class="hotpink-highlight">My personal</span> website</h1>
         <h3>World class professional Web Developer</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi totam ea reiciendis nisi et amet quis neque cum earum voluptates! Officiis quas ducimus consequatur, ut voluptas nulla hic voluptatum doloribus quis, pariatur, iusto tempore! Sit amet totam saepe cumque illo.</p>
-        <button class="first-btn">Hire Me</button>
+        <a class="link-btn" target="_blank" href="https://www.google.com">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/photo-1.jpg" alt="photo-1">
+            <img src="images/photo-1.png" alt="photo-1">
         </div>
     </section>
+
+    <section class="dream-bg">
+        <div class="half-width">
+            <img src="images/photo-2.png" alt="photo-2">
+        </div>
+        <div class="half-width extra-space">
+            <h2>My Dreams</h2>
+            <h3>Became a Web Developer</h3>
+            <p>I already learned the basic HTML and CSS.I can build any simple website.I can even teach my younger brother how to make simple website.My gole is to build 3 websites and learn advanced topics.</p>
+            <a target="_blank" class="link-btn top-button" href="https://www.google.com">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
+    <section class="exprience-bg">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="hotpink-highlight">2021-Present | Pro Level Developer</h3>
+            <p>I'm the master of HTML,CSS and Javascript. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS.I even know the deployment server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Beginner Web Developer</h2>
+            <h3 class="hotpink-highlight">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed  it to them . They liked it. And wploaded the content. I was fun working at Programming Hero</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>© Shipa 2022, all rights reserved.</p>
+    </footer>
+
 </body>
 
 </html>
